# docs/swagger.json
@@ -229,6 +229,87 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "description": "Update restaurant fields such as name, address, contact info, logo, banner, etc.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Restaurant"
+                ],
+                "summary": "Update restaurant information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Restaurant ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Restaurant update payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/restaurantapp.UpdateRestaurantRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Update restaurant successfully",
+                        "schema": {
+                            "$ref": "#/definitions/app.UpdateRestaurantSuccessResponseDoc"
+                        }
+                    },
+                    "default": {
+                        "description": "Errors",
+                        "schema": {
+                            "$ref": "#/definitions/app.ErrorResponseDoc"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Remove a restaurant and its related data using its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Restaurant"
+                ],
+                "summary": "Delete restaurant by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Restaurant ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Restaurant deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/app.DeleteRestaurantSuccessResponseDoc"
+                        }
+                    },
+                    "default": {
+                        "description": "Errors",
+                        "schema": {
+                            "$ref": "#/definitions/app.ErrorResponseDoc"
+                        }
+                    }
+                }
             }
         },
         "/api/upload/logo": {
@@ -272,6 +353,20 @@
     },
     "definitions": {
         "app.CreateRestaurantSuccessResponseDoc": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/restaurantapp.CreateRestaurantResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "response_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.DeleteRestaurantSuccessResponseDoc": {
             "type": "object",
             "properties": {
                 "message": {
@@ -358,6 +453,17 @@
                 "data": {
                     "$ref": "#/definitions/authapp.RegisterSuccess"
                 },
+                "message": {
+                    "type": "string"
+                },
+                "response_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.UpdateRestaurantSuccessResponseDoc": {
+            "type": "object",
+            "properties": {
                 "message": {
                     "type": "string"
                 },
@@ -472,6 +578,45 @@
                 }
             }
         },
+        "restaurant.DayOfWeek": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2,
+                3,
+                4,
+                5,
+                6
+            ],
+            "x-enum-comments": {
+                "Friday": "5",
+                "Monday": "1",
+                "Saturday": "6",
+                "Sunday": "0",
+                "Thursday": "4",
+                "Tuesday": "2",
+                "Wednesday": "3"
+            },
+            "x-enum-descriptions": [
+                "0",
+                "1",
+                "2",
+                "3",
+                "4",
+                "5",
+                "6"
+            ],
+            "x-enum-varnames": [
+                "Sunday",
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday",
+                "Saturday"
+            ]
+        },
         "restaurantapp.CreateRestaurantRequest": {
             "type": "object",
             "properties": {
@@ -496,6 +641,12 @@
                 "email": {
                     "type": "string"
                 },
+                "hours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/restaurantapp.RestaurantHoursBase"
+                    }
+                },
                 "logo_url": {
                     "type": "string"
                 },
@@ -507,6 +658,14 @@
                 },
                 "website_url": {
                     "type": "string"
+                }
+            }
+        },
+        "restaurantapp.CreateRestaurantResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -534,6 +693,15 @@
                 "email": {
                     "type": "string"
                 },
+                "hours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/restaurantapp.RestaurantHoursBase"
+                    }
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
                 "logo_url": {
                     "type": "string"
                 },
@@ -544,6 +712,64 @@
                     "type": "string"
                 },
                 "user_name": {
+                    "type": "string"
+                },
+                "website_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "restaurantapp.RestaurantHoursBase": {
+            "type": "object",
+            "properties": {
+                "close_time": {
+                    "type": "string"
+                },
+                "day": {
+                    "$ref": "#/definitions/restaurant.DayOfWeek"
+                },
+                "open_time": {
+                    "type": "string"
+                }
+            }
+        },
+        "restaurantapp.UpdateRestaurantRequest": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "banner_url": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "district": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "hours": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/restaurantapp.RestaurantHoursBase"
+                    }
+                },
+                "logo_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 },
                 "website_url": {
